--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,8 +1,10 @@
 name: "Terraform"
 
 on:
-  pull_request:
-
+  push:
+    branches:
+      - main
+      
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
