--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -12,8 +12,8 @@ jobs:
     name: "Terraform"
     runs-on: ubuntu-latest
      # Variavel de ambiente workdir onde será gerado o arquivo plan
-    env:
-      working-directory: infracost
+    #env:
+      #working-directory: infracost
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -35,12 +35,12 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -out tfplan.binary
-        working-directory: ${{ env.working-directory }}
+        #working-directory: ${{ env.working-directory }}
 
       - name: Terraform show
         id: show
         run: terraform show -json tfplan.binary > plan.json
-        working-directory: ${{ env.working-directory }}
+        #working-directory: ${{ env.working-directory }}
 
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
@@ -78,7 +78,7 @@ jobs:
       # Passar o arquivo plan salvo no workdir para o infracost gerar os custos
       - name: Generate Infracost JSON
         run: infracost breakdown --path plan.json --format json --out-file /tmp/infracost.json
-        working-directory: ${{ env.working-directory }}
+        #working-directory: ${{ env.working-directory }}
     
       - name: Infracost Actions
         uses: infracost/actions/comment@v1
